Updates items in portal.

--- a/patient/portal.html
+++ b/patient/portal.html
@@ -17,8 +17,7 @@
   
   <body>
     <div class="page">
-      <div class="header-wrapper" style="background-image: url('../assets/patient-banner.png');
-  background-repeat: no-repeat; background-size: cover;">
+      <div class="header-wrapper" style="background-image: url('../assets/patient-banner.png'); background-repeat: no-repeat; background-size: cover;">
         <div class="header">
           <div class="header-image">
             <a href="portal.html">
@@ -50,11 +49,7 @@
           <br>
           <br>
           <br>
-
           <h2>Welcome to New Century Wellness Group, Zach!</h2>
-          <br>
-
-
           <div class="content">
             <h3>Pending Messages</h3>
 
@@ -80,7 +75,6 @@
               </tbody>
             </table>
           </div>
-
           <div class="content">
             <h3>Reminders</h3>
 
@@ -108,13 +102,20 @@
           </div>
           <br>
           <br>
+          <br>
 
           <div class="content">
             <h3>Upcoming Appointments</h3>
+
+            <iframe class="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sockoman32%40aol.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
           </div>
+
           <div class="content">
             <h3>Past Appointments</h3>
+
+            <iframe class="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=sockoman32%40aol.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
           </div>
+          <br>
         </div>
       </div>
     </div>
